<resources>
    <string name="app_name">SubsError</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming_event">Upcoming</string>
    <string name="title_finish_event">Finished</string>
    <string name="title_favourite_event">Favourite</string>
    <string name="list_upcoming">List</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="finished_event">Finished Event</string>
    <string name="favourite_event">Favourite Event</string>
    <string name="setting">Setting</string>
    <string name="title_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="kunjungi">Kunjungi</string>
    <string name="waktu">Waktu : </string>
    <string name="penyelenggara">Penyelenggara :</string>
    <string name="deskripsi">Deskripsi acara akan muncul di sini. Ini adalah penjelasan mendetail tentang apa yang akan dibahas di acara ini.</string>
    <string name="judul">Judul Acara</string>
    <string name="kuota">Sisa Kuota :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>

</resources>