<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.subserror.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.subserror.ui.dashboard.DashboardFragment"
        android:label="@string/title_upcoming_event"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.subserror.ui.finished.FinishedFragment"
        android:label="@string/title_finish_event"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.example.subserror.ui.favorite.FavouriteFragment"
        android:label="@string/title_favourite_event"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.subserror.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting"/>
</navigation>